--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -104,6 +104,12 @@
             }
             #manualCategorySelect {
                 margin-bottom: 0.5rem;
+                padding: 11px;
+                border-radius: 12px;
+            }
+            #passkeyInput{
+                padding: 10px;
+                border-radius: 12px;
             }
             </style>
             
