changed styles for cards

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -194,6 +194,7 @@
         <div class="modal-content modal-small">
             <div class="modal-header">
                 <h2>🔒 Enter Passkey</h2>
+                <button class="close-btn" id="unlockCloseBtn">&times;</button>
             </div>
             <div class="modal-body">
                 <input type="password" id="unlockPasskeyInput" placeholder="Enter passkey">
